【追加】 セクション3レクチャー20

--- a/lesson2_ResponsiveWebDesign/css/style.css
+++ b/lesson2_ResponsiveWebDesign/css/style.css
@@ -1,1 +1,32 @@
 @import url(sanitize.css);
+
+body{
+    background-color: #fefefe;
+    padding: 10px;
+    font-size:14px;
+    color: #666;
+}
+
+.container{
+    width: 800px;
+    margin: 0 auto;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+header{
+    background-color: #422814;
+    padding: 10px;
+    color:white;
+}
+
+header h1{
+    margin: 0;
+    font-size: 24px;
+    font-weight: normal;
+    text-align: center;
+}
+
+.description img{
+    float:left;
+    margin: 0 10px 10px 0;
+}
