--- a/lesson2_ResponsiveWebDesign/css/style.css
+++ b/lesson2_ResponsiveWebDesign/css/style.css
@@ -52,3 +52,39 @@ header h1{
 ol{
     list-style:decimal;
 }
+
+.content{
+    background-color: #fff;
+    padding: 20px;
+}
+.songs{
+    margin: 0 0 20px;
+}
+
+.songs h2{
+    clear: left;
+    font-size: 100%;
+    font-weight: normal;
+    margin: 0;
+    background-color: #e6e4dd;
+    padding: 5px 10px;
+}
+
+.songs ol{
+    padding: 0;
+    margin: 0;
+    list-style: decimal inside;
+}
+
+.songs li{
+    border-bottom:1px solid #ccc;
+    width: 50%;
+    float:left;
+    padding: 5px 10px;
+}
+
+.clearfix:after{
+    content:" ";
+    display: table;
+    clear: both;
+}
