--- a/lesson3_Bootstrap/css/style.css
+++ b/lesson3_Bootstrap/css/style.css
@@ -19,8 +19,8 @@ h1{
 }
 
 @media only screen and (max-width: 992px){
-    .radio-inline+ .radio-inline{
+    .radio-inline{
         display:block;
-        margin:0;
+        margin:0 !important;
     }
 }
